2008-03-27  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/sources_command.rb:  Allow sources to be
	removed without network.  Fixes bug #18644 by Mikel Lindsaar.

2008-03-27  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems/commands/environment_command.rb: Use platform specific
	PATH_SEPARATOR instead of hardcoded ':'
	* test/test_gem_commands_unpack_command.rb: Ditto.
	* test/test_gem_commands_environment_command.rb: Ditto.
	* test/gemutilities.rb: Fix binary file reads being truncated on Windows.
	* test/test_gem_commands_install_command.rb: Switch to read_binary.
	* test/test_gem_commands_update_command.rb: Ditto.
	* test/test_gem_commands_server_command.rb: Consider full path when
	evaluating location (instead of hardcoded or missing drive leter).
	* test/test_gem_installer.rb: Ditto.
	* test/test_gem_dependency_installer.rb: exclude no-wrapper tests for
	Windows.

2008-03-26  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems.rb: Handle backslashes that came from GEM_HOME and
	GEM_PATH on Windows.

2008-03-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_index.rb:  Add updating from latest index,
	default to updating from latest index.  Reduces common-case update
	to under 3,000 gems at present.
	* lib/rubygems/remote_fetcher:  Fix error reporting from net/http.
	* lib/rubygems.rb:  Sort methods, remove last vestiges of autorequire,
	RDoc cleanup.

2008-03-23  Luis Lavena  <luislavena@gmail.com>

	* setup.rb: generated Windows stubs will honors prefix using Gem.ruby
	instead of hardcoded 'ruby.exe'
	* lib/rubygems/installer.rb: generated Windows stubs scripts will now
	work from differnt directories than Gem::bindir. Fixes bug #16259 by
	Claus Folke Brobak

2008-03-20  Eric Hodel  <drbrain@segment7.net>

	* test/test_gem_source_info_cache.rb:  Test with real objects now.
	* lib/rubygems/source_index.rb:  #latest_specs now has latest specs
	for all platforms.